fix viper bug
